2007-10-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/fp.c: made preview windows transient to the
	plug-in dialog. Simplified "Advanced Options" dialog.

2007-10-23  Michael Natterer  <mitch@gimp.org>

	* app/base/pixel-region.c (pixel_region_resize): when resizing,
	don't advance the "data" pointer of regions of contiguous data. I
	should have made this change along with my pixel region cleanup of
	2005-09-03 which sanitized pixel regions of contiguous data.
	Fixes bug #489229.

	* libgimp/gimppixelrgn.c (gimp_pixel_rgn_resize): remove the same
	code here (the removed code was dead since this function refuses
	to be called on pixel regions without a drawable).

2007-10-23  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable-combine.c: formatting.

2007-10-23  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpegqual.c: Added hash value for all known
	quantization tables in order to detect transposed tables from
	rotated images or bad matches coming from different tables with
	the same sum.

2007-10-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/depthmerge.c (util_convertColorspace): fixed
	bogus for-loop.

2007-10-22  Sven Neumann  <sven@gimp.org>

	* app/tools/gimppaintoptions-gui.c: changed aspect ratio of the
	wrap-box used for the "Pressure sensitivity" controls to make them
	fit better into the tool-options.

2007-10-22  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c: Allow one to three
	digits in octal coded characters.

2007-10-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/gflare/gflare.c (plugin_do_non_asupsample): fixed
	initialisation of pixel regions (bug #488845).

2007-10-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/gflare/gflare.c: formatting.

2007-10-22  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpsourcetool.[ch]: don't draw the source brush
	outline while selecting a new source location (bug #488839).

2007-10-22  Sven Neumann  <sven@gimp.org>
