@@ -1,5 +1,10 @@
 2007-10-23  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/fp.c: fixed handling of the empty selection
+	mask (bug #489410).
+
+2007-10-23  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/fp.c: made preview windows transient to the
 	plug-in dialog. Simplified "Advanced Options" dialog.
 
